# RUSH

./: CMakeLists.txt  README.md  main.cpp
burst_graph/: .burst_graph.cpp.swp  burst_graph.cpp
dataset/: fraud.txt  increment.txt
include/: burst_graph.hpp
script/: calculate_latency.py  calculate_result.py  clean_density.py  clean_density2.py  clean_folder.py  count_burst.py  draw_demo_subgraphs.py  find_demo_community.py  find_qualify_edges.py  find_top_fraud_file.py  get_dw_data.py  get_fraudar_data.py  get_metadata.py  merge_files.py  output_burst_density.py  output_data.py  output_f1.py  output_fraud_ndoes.py  output_id.py  output_latency.py  output_latex_code.py  output_money.py  output_percentage.py  output_precision.py  output_precision_vary_batch_size.py  output_precision_vary_half_life.py  output_ratio.py  output_time.py  parallel_run.py  parallel_vary_batch_size.py  parallel_vary_half_life.py  plot_density.py  plot_density2.py  plot_density3.py  plot_meta.py  plot_precision.py  plot_vary_batch_size.py  run_experiment.py  write_latency.py  write_price.py  (+3 more)
test/: batch_update_test.cpp  load_graph_test.cpp  output_dense_subgraph.cpp  peeling_test.cpp  update_single_edge_test.cpp
